appId: com.newexample
---
- launchApp:
    clearState: true
    arguments:
      snapshotMode: true
      initialExample: "Actions"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 60000
- waitForAnimationToEnd
- takeScreenshot:
    path: .maestro/goldens/android/actions
    cropOn:
      id: "divkit-snapshot-area"
- tapOn: "Increment Counter"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 60000
- waitForAnimationToEnd
- takeScreenshot:
    path: .maestro/goldens/android/actions_part2
    cropOn:
      id: "divkit-snapshot-area"
