appId: com.newexample
---
- launchApp:
    clearState: true
    arguments:
      snapshotMode: true
      initialExample: "State"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 60000
- waitForAnimationToEnd
- takeScreenshot:
    path: .maestro/goldens/android/state-switching
    cropOn:
      id: "divkit-snapshot-area"
- tapOn: "State 1 - Blue"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 60000
- waitForAnimationToEnd
- takeScreenshot:
    path: .maestro/goldens/android/state-switching_part2
    cropOn:
      id: "divkit-snapshot-area"