appId: com.newexample
---
- launchApp:
    clearState: true
    arguments:
      snapshotMode: true
      initialExample: "Transition Change"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 60000
- waitForAnimationToEnd
- takeScreenshot:
    path: .maestro/goldens/android/transition_out
    cropOn:
      id: "divkit-snapshot-area"
- tapOn: "Test Button"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 60000
- waitForAnimationToEnd
- takeScreenshot:
    path: .maestro/goldens/android/transition_out_part2
    cropOn:
      id: "divkit-snapshot-area"