appId: com.newexample
---
- launchApp:
    clearState: true
    arguments:
      snapshotMode: true
      initialExample: "Actions"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 30000
- waitForAnimationToEnd
- assertScreenshot:
    path: .maestro/goldens/android/actions.png
    cropOn:
      id: "divkit-snapshot-area"
    thresholdPercentage: 98
- tapOn: "Increment Counter"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 30000
- waitForAnimationToEnd
- assertScreenshot:
    path: .maestro/goldens/android/actions_part2.png
    cropOn:
      id: "divkit-snapshot-area"
    thresholdPercentage: 98
