appId: com.newexample
---
- launchApp:
    clearState: true
    arguments:
      snapshotMode: true
      initialExample: "State"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 30000
- waitForAnimationToEnd
- assertScreenshot:
    path: .maestro/goldens/android/state-switching.png
    cropOn:
      id: "divkit-snapshot-area"
    thresholdPercentage: 98
- tapOn: "State 1 - Blue"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 30000
- waitForAnimationToEnd
- assertScreenshot:
    path: .maestro/goldens/android/state-switching_part2.png
    cropOn:
      id: "divkit-snapshot-area"
    thresholdPercentage: 98
