appId: com.newexample
---
- launchApp:
    clearState: true
    arguments:
      snapshotMode: true
      initialExample: "Transition Change"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 30000
- waitForAnimationToEnd
- assertScreenshot:
    path: .maestro/goldens/android/transition_out.png
    cropOn:
      id: "divkit-snapshot-area"
    thresholdPercentage: 98
- tapOn: "Test Button"
- extendedWaitUntil:
    visible:
      id: "divkit-content-ready"
    timeout: 30000
- waitForAnimationToEnd
- assertScreenshot:
    path: .maestro/goldens/android/transition_out_part2.png
    cropOn:
      id: "divkit-snapshot-area"
    thresholdPercentage: 98
